tests/neg-custom-args/captures/outer-fresh.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-fresh.scala:11:43 ----------------------------------
11 |  val _: (s: String) -> (t: String) -> A = x // error
   |                                           ^
   |                  Found:    (Test.x : (s: String) -> (t: String) -> A^{fresh})
   |                  Required: (s: String) -> (t: String) -> A
   |
   |                  Note that capability `fresh` cannot flow into capture set {}.
   |
   |                  where:    fresh is a root capability associated with the result type of (t: String): A^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-fresh.scala:14:43 ----------------------------------
14 |  val _: (s: String) -> (t: String) -> A = y // error
   |                                           ^
   |                  Found:    (Test.y : (s: String) -> (t: String) -> A^{fresh})
   |                  Required: (s: String) -> (t: String) -> A
   |
   |                  Note that capability `fresh` cannot flow into capture set {}.
   |
   |                  where:    fresh is a root capability associated with the result type of (t: String): A^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-fresh.scala:17:34 ----------------------------------
17 |  val _: () -> (t: String) -> A = z // error
   |                                  ^
   |                  Found:    (Test.z : () -> (t: String) -> A^{fresh})
   |                  Required: () -> (t: String) -> A
   |
   |                  Note that capability `fresh` cannot flow into capture set {}.
   |
   |                  where:    fresh is a root capability associated with the result type of (t: String): A^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-fresh.scala:20:34 ----------------------------------
20 |  val _: () -> (t: String) -> A = z2 // error
   |                                  ^^
   |                  Found:    (Test.z2 : () -> (t: String) -> A^{fresh})
   |                  Required: () -> (t: String) -> A
   |
   |                  Note that capability `fresh` cannot flow into capture set {}.
   |
   |                  where:    fresh is a root capability associated with the result type of (t: String): A^{fresh}
   |
   | longer explanation available when compiling with `-explain`
